# rr.soft

./: .gitignore  CMakeLists.txt  README.md  flake.nix
compiler-plugins/SoftwareCountersClangPlugin/: .gitignore  CMakeLists.txt  Makefile  README.md  SoftwareCounters.cpp  locations.h  testCounter.c  testSimpleCounter.c
compiler-plugins/SoftwareCountersGccPlugin/: .clang-format  .gitignore  Makefile  README.md  hello.c  locations.h  plugin.cpp
scripts/: lscache
src/: AddressSpace.cc  AddressSpace.h  AutoRemoteSyscalls.cc  DumpCommand.cc  ElfReader.cc  ElfReader.h  Event.cc  Event.h  ExtraRegisters.cc  ExtraRegisters.h  Flags.h  GdbServer.cc  GdbServerConnection.cc  GdbServerConnection.h  GdbServerRegister.h  MemoryRange.h  Monkeypatcher.cc  Monkeypatcher.h  PerfCounters.cc  PerfCounters.h  PerfCounters_aarch64.h  PerfCounters_x86.h  RecordCommand.cc  RecordSession.cc  RecordSession.h  RecordTask.cc  RecordTask.h  Registers.cc  Registers.h  ReplaySession.cc  ReturnAddressList.cc  ReturnAddressList.h  Session.cc  Session.h  SourcesCommand.cc  TargetDescription.cc  Task.cc  Task.h  TraceStream.cc  kernel_abi.h  (+9 more)
src/preload/: overrides.c  preload_interface.h
src/test/: early_error.run  execve_failed.run  ignore_nested.run  jit_proc_mem.c  many_yields.run  map_shared_syscall.c  mmap_replace_most_mappings.c  nested_detach.run  nested_detach_kill.run  nested_detach_kill_stuck.run  nested_detach_stop.run  nested_detach_wait.run  nested_release.run  util.sh  vsyscall_singlestep.run
src/test/x86/: cpuid_singlestep.run
